# mlx-mineru

./: .gitignore  AGENT.md  CMakeLists.txt  DIFF.md  GAP.md  GOAL.md  PERF.md  PIPELINE.md  PLAN.md  README.md  REVIEW.md  USAGE.md  build.sh  clean.sh  dev.sh  run.sh
.claude/: launch.json
include/mineru/: cv_resize.hpp  draw_bbox.hpp  enums.hpp  formula_rec.hpp  image_preprocess.hpp  image_to_pdf.hpp  image_write.hpp  layout_det.hpp  mfr_mlx_decoder.hpp  middle_json.hpp  mkcontent.hpp  ocr.hpp  ocr_det.hpp  ocr_rec.hpp  otsl.hpp  pdf.hpp  pipeline_assemble.hpp  pipeline_driver.hpp  post_ocr.hpp  post_process.hpp  qwen2_vl.hpp  table_cls.hpp  table_merge.hpp  table_rec.hpp  tokenizer.hpp  vlm_layout.hpp  web_assets.hpp  wired_table.hpp
mumodel/: README.md
scripts/: build_and_test.sh  build_mlx_static.sh  build_mnn_static.sh  build_onnxruntime_static.sh  build_opencv_static.sh  build_pdfium_static_src.sh  convert_pipeline_mnn.sh  embed_web.py  export_layout_onnx.py  export_mfr_onnx.py  export_ocr_onnx.py  extract_mfr_decoder_weights.py  fetch_mlx.sh  fetch_mumodel.sh  fetch_onnxruntime.sh  fetch_pdfium.sh  fetch_pdfium_deps.sh  fetch_pipeline_models.sh  fetch_reference.sh  fetch_tokenizer.sh  fetch_weights.sh  gen_golden.py  gen_layout_golden.py  gen_llm_golden.py  gen_mfr_golden.py  gen_ocr_det_golden.py  gen_ocr_page_golden.py  gen_ocr_rec_golden.py  gen_pdf_golden.py  gen_pipeline_golden.py  gen_pp_layout_golden.py  gen_preprocess_golden.py  gen_tabcls_golden.py  gen_table_golden.py  gen_table_match_golden.py  gen_table_merge_golden.py  gen_tokenizer_golden.py  gen_unicode_tables.py  gen_vision_golden.py  gen_vlm_golden.py  (+6 more)
src/cli/: main.cpp
src/core/: middle_json.cpp  pipeline_assemble.cpp  table_merge.cpp
src/io/: draw_bbox.cpp  image_to_pdf.cpp  image_write.cpp  pdf.cpp
src/output/: mkcontent.cpp  text_utils.cpp  text_utils.hpp
src/pipeline/: cv_resize.cpp  formula_rec.cpp  layout_det.cpp  mfr_mlx_decoder.cpp  mnn_runner.cpp  mnn_runner.hpp  ocr.cpp  ocr_det.cpp  ocr_rec.cpp  pipeline_driver.cpp  post_ocr.cpp  table_cls.cpp  table_rec.cpp  wired_table.cpp
src/vlm/: image_preprocess.cpp  otsl.cpp  post_process.cpp  qwen2_llm.cpp  tokenizer.cpp  unicode_tables.hpp  vlm_layout.cpp
tests/: test_formula_number.cpp  test_layout.cpp  test_layout_det.cpp  test_layout_order.cpp  test_llm_forward.cpp  test_mfr.cpp  test_mfr_mlx.cpp  test_middle_json_roundtrip.cpp  test_mkcontent_golden.cpp  test_mlx_smoke.cpp  test_ocr_det.cpp  test_ocr_page.cpp  test_ocr_rec.cpp  test_onnx_smoke.cpp  test_otsl.cpp  test_pdf_raster.cpp  test_pipeline_assemble.cpp  test_pipeline_digital.cpp  test_pipeline_formula.cpp  test_pipeline_formula_scratch.cpp  test_pipeline_md.cpp  test_pipeline_multipage.cpp  test_pipeline_scratch.cpp  test_pipeline_table.cpp  test_pipeline_table_scratch.cpp  test_pipeline_textfill.cpp  test_post_process.cpp  test_preprocess.cpp  test_tab_cls.cpp  test_table.cpp  test_table_merge.cpp  test_tokenizer.cpp  test_util.hpp  test_vision.cpp  test_vlm.cpp  test_vlm_batch.cpp  test_wired_table.cpp
tests/data/: sample_middle.json
tests/golden/: demo1_p2_middle.json  demo1_p2_model.json  demo1_p5_middle.json  demo1_p5_model.json  layout.json  layout_det.json  llm.json  mfr.json  mfr_input.rgb  mfr_pixel.f32  ocr_det.json  ocr_det_probmap.f32  ocr_page.json  ocr_rec.json  otsl.json  pdf_raster.json  pipeline_middle.json  pipeline_model.json  pipeline_p0_middle.json  pipeline_p0_model.json  post_process.json  preprocess.json  preprocess_input.rgb  sample.content_list.json  sample.content_list_v2.json  sample.mm.md  sample.nlp.md  tabcls.json  table_input.rgb  table_match.json  table_merge_golden.json  table_struct.json  tokenizer.json  vision.json  vlm.json  wired_table.json  wired_table_input.rgb  wired_table_logi.i32  wired_table_polys.f32  wired_table_seg.u8
web/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.js
web/src/: App.vue  style.css
